--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+// API 키
 REACT_APP_KAKAOAPI_KEY="77d18f762cefcfd4e6d6a32b4ae62e8e"
 REACT_APP_API_KEY="AIzaSyDj2e7k0SkxPpfKDj_SGab0vk6oa7qv4G0"
 REACT_APP_AUTH_DOMAIN="my-map-food.firebaseapp.com"
@@ -5,3 +6,6 @@ REACT_APP_PROJECT_ID="my-map-food"
 REACT_APP_STORAGE_BUCKET="my-map-food.appspot.com"
 REACT_APP_MESSAGING_SENDER_ID="281487609538"
 REACT_APP_APP_ID="1:281487609538:web:1530be516c01346ca5755b"
+
+// 절대 경로
+NODE_PATH=src
